
🚧 The playback structure will likely change again after trimming support is added.
** Added
- Serialize source overlays for playback
- Clean source overlays to remove information that displays poorly in the focus buffer
- Toggling of the invisibility spec and focus overlays
** Changed
- =:beg= and =:end= are no longer keys for ~moc-focus~ playback
** Fixed
- Multi-line regions selected with leading whitespace will have the whitespace included.  (Later trimming support will remove leading whitespace that is extraneous)
- Improper minor mode state initialization and tracking would turn ~moc-subtle-cursor-mode~ on after ~moc-focus~ buffer was dismissed
- Set window fringes and margins to zero to avoid visual "bars" in some themes
* v0.4.0 Packaging 🍱
This release series will make +mc+ ~moc~ ready for publishing on package archives.

⚠️ The package prefix has been changed to =moc=.  Hopefully this is the final choice.  It's not totally up to me.
** Added ✨
- ~moc-screenshot-type~ customize option added.  Defaults to =svg=.
- ~moc-focus-base-buffer~ local variable in MoC buffers makes it easier to use buffer locals from the base buffer even when invoking MoC multiple times and otherwise losing those states
** Changed 📈
- ~moc-screenshot-path~ option was renamed to ~moc-screenshot-dir~
- ~mc-focus~ playback now uses =:plist= style keyword args.  The new keys:
  + =:invisibility-spec=
  + =:overlays=
  + =:beg=
  + =:end=
  + =:string= 🚧 Experimental!  Might change to =:text= or =:spans= depending on what happens with trimming
  + =:highlights=
** Fixed 👷
- ~moc-subtle-cursor-mode~ no longer blinks from non-motion commands
* v0.3.0 A New Hope 🎄
Nearly a complete rewrite.  After figuring out what belongs in dslide, this package has become more clearly defined.

The ~moc-focus~ command remains the focal point.  Many of the tools like setting the size, hiding the cursor, or changing faces all serve to enhance ~moc-focus~.
